--- a/layouts/partials/cta.html
+++ b/layouts/partials/cta.html
@@ -18,7 +18,7 @@
               <a
                 href="{{ .url }}"
                 target="_blank"
-                class="btn btn-primary"
+                class="btn btn-primary {{ if .disabled }}disabled{{ end }}"
                 >{{.text }}</a
               >
               {{ end }}
