--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -916,3 +916,11 @@ code {
   margin-left: 30px;
   list-style-type: circle;
 }
+
+.announcement {
+  background-color: white;
+  box-shadow: 0px 0px 51px -32px rgba(0, 0, 0, 0.75);
+  padding: 2em;
+  margin-bottom: 2em;
+  text-align: justify;
+}
